14726 FIX Average scatterplot tooltip now renders across dashlet boundaries
The tooltip of the average scatterplot dashlet can now render across
the dashlet boundary.
Before the tooltip was cut off and therefore only partially visible.

CMK-12189

--- a/web/htdocs/themes/facelift/scss/_dashboard.scss
+++ b/web/htdocs/themes/facelift/scss/_dashboard.scss
@@ -151,7 +151,8 @@ div.dashlet_inner div.stats {
   }
 }
 
-div.site_overview div.dashlet_inner {
+div.site_overview div.dashlet_inner,
+div.average_scatterplot div.dashlet_inner {
   overflow: visible;
 }
 
